# aws-devops-agent-networking-skill

./: .gitignore  README.md
2-template-aws-nfw/: KNOWN-EXCEPTIONS.md  README.md  SKILL.md
2-template-aws-nfw/references/: best-practices.md  cli-reference.md  troubleshooting-guide.md
2-template-aws-nfw/references/runbooks/: alb-nlb-troubleshooting.md  east-west-connectivity.md  firewall-investigation.md  hybrid-connectivity.md  internet-ingress.md  ipv6-dual-stack.md  mtu-pmtud-issues.md  multi-account-networking.md  timeout-keepalive-issues.md
3-template-3rdparty-fw/: KNOWN-EXCEPTIONS.md  MCP-SERVERS.md  README.md  SKILL.md
3-template-3rdparty-fw/fortinet-mcp/: BUILD-TRACKER.md  README.md
3-template-3rdparty-fw/fortinet-mcp/deployment/: devops-agent-config.md  option-a-ec2.yaml  option-b-ecs-guide.md  option-b-ecs.yaml
3-template-3rdparty-fw/fortinet-mcp/fortianalyzer-mcp/: .env.template  Dockerfile  pyproject.toml
3-template-3rdparty-fw/fortinet-mcp/fortianalyzer-mcp/src/: client.py  server.py
3-template-3rdparty-fw/fortinet-mcp/fortigate-mcp/: .env.template  Dockerfile  README.md  devices.json.template  pyproject.toml
3-template-3rdparty-fw/fortinet-mcp/fortigate-mcp/src/: client.py  server.py
3-template-3rdparty-fw/fortinet-mcp/fortimanager-mcp/: .env.template  Dockerfile  pyproject.toml
3-template-3rdparty-fw/fortinet-mcp/fortimanager-mcp/src/: client.py  server.py
3-template-3rdparty-fw/references/runbooks/: alb-nlb-troubleshooting.md  aws-service-access.md  cloud-wan-troubleshooting.md  dns-firewall.md  dns-troubleshooting.md  vpc-peering.md  (+14 more)
