[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortianalyzer-mcp"
version = "1.0.0"
description = "MCP server for FortiAnalyzer log analysis, alerts, incidents, and FortiView analytics"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
fortianalyzer-mcp = "src.server:main"
