[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortimanager-mcp"
version = "1.0.0"
description = "MCP server for FortiManager centralized policy management and device monitoring"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
fortimanager-mcp = "src.server:main"
